--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,6 @@ pre-commit = "^2.20.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+check-commit-msg = "hooks.check-commit-msg.hook:main"
