--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 description = "A hook for pre-commit package to validate commit message"
 authors = ["p0lygun <solankivibhakar82@gmail.com>"]
 license = "MIT"
+packages = [
+    {include = "hooks"},
+]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
@@ -16,4 +20,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-check-commit-msg = "hooks.check-commit-msg.hook:main"
+check-commit-msg = "hooks.check_commit_msg:main"
