--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
