--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ loguru = "^0.6.0"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
 pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
