fix: add dependency for test

--- a/.github/workflows/codcov.yaml
+++ b/.github/workflows/codcov.yaml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Generate coverage report
       run: |
+        pip install loguru
         pip install pytest
         pip install pytest-cov
         pytest --cov=hooks/ --cov-report=xml
